[gd_scene load_steps=4 format=3 uid="uid://3dtd25hshytg"]

[ext_resource type="Script" path="res://scripts/ui/RecipeItem.gd" id="1_w5uxl"]
[ext_resource type="Texture2D" uid="uid://dufuktxr3b3lk" path="res://assets/images/products/default.png" id="2_h0ieo"]
[ext_resource type="Texture2D" uid="uid://d0i6kgqtd33o5" path="res://assets/images/icons/lock_icon.png" id="3_eoawq"]

[node name="RecipeItem" type="Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_w5uxl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 0.4)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProductIcon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_h0ieo")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Название рецепта"
vertical_alignment = 1

[node name="IngredientsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.5
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Ингредиент 1, Ингредиент 2, Ингредиент 3"
vertical_alignment = 1
autowrap_mode = 2

[node name="LockedIcon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_eoawq")
expand_mode = 1
stretch_mode = 5